# google-book-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  attribute.sh  attribution.txt  installer.iss  release_notes.md  timestamp.txt
.github/: winget.yml
.github/workflows/: brew.yml  choco.yml  publish.yml  publish_cargo.yml  publish_choco.yml  publish_homebrew.yml  publish_winget.yml  rebuild_installers.yml  release-test.yml  release.yml  release_test.yml  test.yml  tmp_release_upload.yml  winget.yml
.github/workflows/publish/: winget.yml
pkg/choco/: gbscraper.nuspec
pkg/choco/tools/: VERIFICATION.txt  chocolateyinstall.ps1
src/: main.rs
src/lib/: lib.rs  page_scraper.rs  pdf.rs  scraper.rs
src/lib/scraper/: batching.rs  helpers.rs  mod.rs  scraper.rs  types.rs
src/lib/writer/: cbz.rs  mod.rs  pdf.rs
src/util/: main.rs
