[package]
name = "google-book-scraper"
version = "0.1.1"
edition = "2021"
description = "Tool and library for downloading the contents of books hosted on books.google.com for offline viewing."
default-run = "gbscraper"
license = "MIT AND Apache-2.0"
repository = "https://github.com/shloop/google-book-scraper"

[lib]
name = "gbscraper"
path = "src/lib/lib.rs"

[[bin]]
name = "gbscraper"
path = "src/util/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = {version = "0.33.0", features = ["embed_image"]}
scraper = {version = "0.20.0"}
reqwest = {version = "0.12.5", features = ["blocking"]}
url = {version = "2.5.2"}
serde = { version = "1.0.24" , features = ["derive"] }
serde_json = { version = "1.0.122" }
clap = { version = "4.5.13", features = ["derive"] }
bitflags = "2.6.0"
zip = "2.1.6"
